Fix/cxbox 417 security updates. Target variant with parent upgrade (#217)
* bumped cxbox-starter-parent version to 4.0.0-M5 from 4.0.0-M5-SNAPSHOT
* removed explicit dependency versions for ones, that manged by spring-boot
* moved jobrunr to 7.1.1 to be in sync with spring-boot 3.2.5 (e.g. to be in sync with cxbox-starter-parent)
* removed mapstruct dependency
* removed springdoc-openapi-starter-webmvc-ui dependency
* removed datasource-proxy-spring-boot-starter dependency
* removed dadata dependency
* bumped  maven-checkstyle-plugin version  to 3.3.1 from 3.3.0
* removed guava usage in project code
* renamed taskExecutor to support @Async annotation
* corresponding code fixes and clean up